# ai-jurepi-kr

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts  wrangler.jsonc
.claude/agents/: ai-integration-engineer.md  architect.md  deploy-engineer.md  domain-engineer.md  platform-engineer.md  qa-integration.md  seo-geo-engineer.md  ui-engineer.md
.claude/skills/ai-jurepi-build/: SKILL.md
.claude/skills/ai-jurepi-tdd/: SKILL.md
.claude/skills/ai-provider-integration/: SKILL.md
.claude/skills/ai-tool-spec/: SKILL.md
.claude/skills/clean-architecture/: SKILL.md
.claude/skills/design-system-fidelity/: SKILL.md
.claude/skills/integration-qa/: SKILL.md
.claude/skills/nextjs-server-platform/: SKILL.md
docs/: DEPLOY.md  DESIGN.md  SPEC.md  prompt.md
evals/: README.md  pyproject.toml  run_comparative_eval.sh
evals/hairstyle/: __init__.py  run.py  schemas.py
public/: llms.txt
public/fonts/: fonts.css
scripts/: export-prompts.ts  generate-face-shape-refs.ts  generate-hairstyle-refs.ts
src/: middleware.ts
src/app/: layout.tsx  manifest.ts  robots.ts  sitemap.ts
src/hooks/: useHomeFavorites.ts  useLocalStorage.ts  useReducedMotion.ts  useToast.ts
src/i18n/: request.ts  routing.ts
src/lib/: api-envelope.ts  env.ts  rate-limit.ts  seo.ts  utils.ts
src/lib/ai/: env.ts  (+12 more)
src/styles/: globals.css  tokens.css
src/tools/: registry.ts  types.ts
tests/e2e/: cursor-affordance.spec.ts  hairstyle-recommendation.spec.ts  home-shell.spec.ts
(+88 files in other folders)
