[project]
name = "hairstyle-evals"
version = "0.1.0"
description = "Prompt evaluation harness for hairstyle-recommendation using local Ollama"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=0.1.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[tool.uv]
